--- a/CSS/blogstyling.css
+++ b/CSS/blogstyling.css
@@ -5,4 +5,39 @@ body {
     align-self: center;
     text-align: center;
     background-color: cyan;
+    margin: 50px;
+}
+.navbar {
+    background-color: lightblue;
+  }
+  
+  .navbar .nav-link {
+    color: navy;
+  }
+  
+
+#blog {
+    background-color: lightblue;
+}
+
+#home {
+    background-color: navy;
+}
+
+h1 {
+    padding: 10px;
+    font-style: italic;
+    font-family: 'Times New Roman', Times, serif;
+}
+img {
+  height: 300px;
+}
+
+h2 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+p {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 25px;
 }
