--- a/CSS/landingpage.css
+++ b/CSS/landingpage.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: lightblue;
+    background-color: cyan;
   }
   
   .navbar .nav-link {
@@ -8,7 +8,7 @@
   
 
 #blog {
-    background-color: lightblue;
+    background-color: cyan;
 }
 
 #home {
