--- a/CSS/blogstyling.css
+++ b/CSS/blogstyling.css
@@ -4,21 +4,16 @@ body {
     justify-content: center;
     align-self: center;
     text-align: center;
-    background-color: cyan;
+    background-color: navy;
     margin: 50px;
 }
 .navbar {
-    background-color: lightblue;
+    background-color: cyan;
   }
   
   .navbar .nav-link {
     color: navy;
   }
-  
-
-#blog {
-    background-color: lightblue;
-}
 
 #home {
     background-color: navy;
@@ -29,15 +24,27 @@ h1 {
     font-style: italic;
     font-family: 'Times New Roman', Times, serif;
 }
-img {
-  height: 300px;
+.rounded-circle {
+    margin-top: 30px;
+    height: 400px;
 }
 
 h2 {
+    color: cyan;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 p {
+    color: navy;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 25px;
+}
+
+.middle-top {
+    background-color: cyan;
+}
+
+.side-heading {
+    color: cyan;
+text-align: center;
 }
