--- a/CSS/blogstyling.css
+++ b/CSS/blogstyling.css
@@ -1,11 +1,9 @@
 body {
     display: block;
-    align-items: center;
-    justify-content: center;
-    align-self: center;
-    text-align: center;
     background-color: navy;
+    text-align: center;
     margin: 50px;
+    color: cyan;
 }
 .navbar {
     background-color: cyan;
@@ -35,7 +33,7 @@ h2 {
 }
 
 p {
-    color: navy;
+    color: cyan;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 25px;
 }
@@ -47,4 +45,9 @@ p {
 .side-heading {
     color: cyan;
 text-align: center;
+}
+
+h3{
+    font-weight: bold;
+    font-size: 30px;
 }
