--- a/CSS/blogstyling.css
+++ b/CSS/blogstyling.css
@@ -1,23 +1,27 @@
 body {
-    display: block;
     background-color: navy;
+    margin-top: 50px;
     text-align: center;
-    margin: 50px;
+}
+
+.navbar {
+    color: navy;
+}
+
+.nav-link {
     color: cyan;
 }
-.navbar {
-    background-color: cyan;
-  }
-  
-  .navbar .nav-link {
-    color: navy;
-  }
+
+#blog {
+    background-color: navy;
+}
 
 #home {
-    background-color: navy;
+    background-color: cyan;
 }
 
 h1 {
+    color: cyan;
     padding: 10px;
     font-style: italic;
     font-family: 'Times New Roman', Times, serif;
@@ -27,7 +31,7 @@ h1 {
     height: 400px;
 }
 
-h2 {
+h2, h3 {
     color: cyan;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
