--- a/CSS/blogstyling.css
+++ b/CSS/blogstyling.css
@@ -13,15 +13,15 @@ body {
 }
 
 #blog {
-    background-color: navy;
+    background-color: hsl(240, 50%, 30%);
 }
 
 #home {
-    background-color: cyan;
+    background-color: hsl(180, 50%, 70%);
 }
 
 h1 {
-    color: cyan;
+    color: hsl(180, 50%, 70%);
     padding: 10px;
     font-style: italic;
     font-family: 'Times New Roman', Times, serif;
@@ -32,22 +32,22 @@ h1 {
 }
 
 h2, h3 {
-    color: cyan;
+    color: hsl(180, 50%, 70%);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 p {
-    color: cyan;
+    color: hsl(180, 50%, 70%);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 25px;
 }
 
 .middle-top {
-    background-color: cyan;
+    background-color: hsl(180, 50%, 70%);
 }
 
 .side-heading {
-    color: cyan;
+    color: hsl(180, 50%, 70%);
 text-align: center;
 }
 
