--- a/CSS/blogstyling.css
+++ b/CSS/blogstyling.css
@@ -55,4 +55,6 @@ text-align: center;
 h3{
     font-weight: bold;
     font-size: 30px;
+    font-style: italic;
+    font-family: 'Times New Roman', Times, serif;
 }
